<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity"
    tools:viewBindingIgnore="true"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/white"

        android:gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <ImageButton
            android:id="@+id/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_chevron_left_24"
            android:background="@drawable/button_invis"
            android:layout_marginEnd="16dp"

            />
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:text="Masuk"
            app:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            />
        <ImageButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_headset_mic_24"
            android:background="@drawable/button_invis"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="Masuk dengan Google"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_google"
                android:padding="16dp"
                />
            <Button
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="Masuk dengan Facebook"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_facebook"
                android:padding="16dp"
                />

            <LinearLayout
                android:layout_marginVertical="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Atau"
                    android:paddingHorizontal="8dp"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_username"
                android:paddingHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username or Email"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_marginTop="16dp"
                >
                <EditText
                    android:id="@+id/et_password"
                    android:paddingHorizontal="16dp"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan Password"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/button_invis"
            app:fontFamily="@font/inter_bold"
            android:textColor="@color/green"
            android:text="Lupa Password"/>

            <Button
                android:id="@+id/bt_login"
                android:paddingVertical="20dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                app:fontFamily="@font/inter_bold"
                android:text="Login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />

            <Button
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:foregroundTint="@color/green"
                app:fontFamily="@font/inter_bold"
                android:background="@drawable/border_green"
                android:text="Masuk dengan Fingerprint"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:textAllCaps="false"
                />
            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:fontFamily="@font/inter_bold"
                    android:textColor="@color/black"
                    android:text="Belum punya akun? "/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/button_invis"
                    app:fontFamily="@font/inter_bold"
                    android:textColor="@color/green"
                    android:text="Daftar Sekarang"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
</layout>