...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_stock"
                android:clipToPadding="false"
                android:visibility="gone"
                />
...
